<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label_number_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_one" />

    <EditText
        android:id="@+id/n1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/label_number_two"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_two" />

    <EditText
        android:id="@+id/n2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/five" />

    <Button
        android:id="@+id/btOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sum" />

    <TextView
        android:id="@+id/labelSoma"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/result" />

</LinearLayout>